# shadowsocks-libev

./: .gitmodules  CMakeLists.txt
cmake/: configure.cmake
src/: CMakeLists.txt  common.h  jconf.h  kcp_para.c  kcp_para.h  local.c  local.h  server.c  server.h
